[package]
name = "dedup"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
anyhow = "1.0"
log = "0.4.17"
env_logger = "0.9.0"
